# exotica_baxter

./: CMakeLists.txt  package.xml
config/: baxter.srdf  baxter_ik.xml  baxter_no_gazebo.urdf
launch/: setup_exotica.launch
scripts/: fk_example.py
